fix: 修复 GitHub Actions CI 配置
- 将 docker-compose 改为 docker compose (V2语法)
- 修复 golangci-lint 版本和配置
- 添加 AI 交互轨迹日志文档

修复问题：
1. Docker Build 失败 - command not found 错误
2. Lint 检查失败 - 版本兼容性问题

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
     
     - name: Test Docker Compose
       run: |
-        docker-compose up -d
+        docker compose up -d
         sleep 10
         
         # 健康检查
@@ -78,11 +78,11 @@ jobs:
         fi
         
         # 清理
-        docker-compose down
+        docker compose down
     
     - name: Docker Compose Down
       if: always()
-      run: docker-compose down -v
+      run: docker compose down -v
 
   lint:
     name: Lint
@@ -100,5 +100,5 @@ jobs:
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v3
       with:
-        version: latest
-        args: --timeout=5m
+        version: v1.55
+        args: --timeout=5m --skip-dirs=bin
