--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,22 +1,22 @@
 linters:
+  disable-all: true
   enable:
     - gofmt
     - govet
     - errcheck
-    - staticcheck
-    - unused
-    - gosimple
-    - ineffassign
 
 linters-settings:
   errcheck:
-    check-blank: true
+    check-blank: false
+    check-type-assertions: false
   
 run:
   timeout: 5m
   tests: true
+  skip-dirs:
+    - bin
 
 issues:
-  exclude-use-default: false
-  max-issues-per-linter: 0
-  max-same-issues: 0
+  exclude-use-default: true
+  max-issues-per-linter: 50
+  max-same-issues: 3
